Fixing z-indexes

--- a/stylesheets/asset-hound.sass
+++ b/stylesheets/asset-hound.sass
@@ -21,6 +21,7 @@ body
     +position(fixed, 0px 0px null 0px)
     background-color: shade($color, 40%)
     padding: 20px
+    z-index: 10
 
     img
       display: block
@@ -41,6 +42,7 @@ body
     +position(fixed, 90px null 0px 0px)
     background-color: shade($color, 25%)
     width: 240px
+    z-index: 10
 
     &__list,
     &__sub-list
